2002-03-20 01:00
 All:
  - Great Renaming of header files
2002-03-20 00:30
 All:
  - Moved library header files into include directory
  - Moved library source files into src directory
  - Moved test source files into test directory
 Makefile:
  - Reduced use of repetitive explicit rules
2002-03-17 01:30
 All:
  - Full test coverage!
 Cursor:
  - Full test coverage
  - Removed PostgreSQL-specific FORWARD/BACKWARD, previously labeled "ANSI"
  - Kludged BACKWARD_ALL around breakage
  - Implemented += and -=
 NonTransaction, RobustTransaction, Transaction:
  - Documented test coverage of overridables, even though they're private
 Test1:
  - More comments
 Test19:
  - Created
 Test3:
  - Improved Cursor test coverage
 TransactionItf:
  - Updated header comments
2002-03-05 17:45
 Makefile:
  - Now queries log table at end of regression test; should be empty
 Test4, Test6, Test7, Test13, Test15, Test17:
  - Recommended practice is now to use TRANSACTIONTYPE in Transactors
 Test18:
  - Created
2002-03-05 00:30
 RobustTransaction:
  - Initial implementation
 Test14:
  - Oops, tested Transaction instead of NonTransaction
 Test16:
  - Created
 Test17:
  - Created
2002-03-04 22:00
 RobustTransaction:
  - Created as outline based on Transaction
2002-03-04 00:30
 NonTransaction:
  - Created
 Test14:
  - Created
 Test15:
  - Created
 Transaction:
  - Made subclass of new abstract base class TransactionItf
 TransactionItf:
  - Created
 Transactor:
  - Made choice of transaction class parameterizable
2002-03-03 17:00
 Transactor:
  - Made Transaction class selectable, so can add more transaction types later
  - Added OnDoubt()
2002-03-03 16:15
 Connection:
  - In-doubt transactions are no longer retried
 Makefile:
  - Added /usr/include/postgresql/internal to include path
  - Works for PostgreSQL 7.1 and 7.2 now
 Transaction:
  - Introduced checking for in-doubt transactions
  - Minor improvements in error handling
2002-03-02 14:15
 TableReader:
  - Full test coverage
 Test6: